added playwright basic config

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,6 @@ dist
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,macos
+/test-results/
+/playwright-report/
+/playwright/.cache/
