--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test" : "npx playwright test",
+    "test report": "npx playwright show-report"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,6 @@
     "utils": "github:PaulaB-Projects/utils"
   },
   "devDependencies": {
-    "@playwright/test": "^1.35.1"
+    "@playwright/test": "^1.41.0"
   }
 }
