--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
 
     steps:
       - name: Trigger deployment
-        run: curl -X POST "${{ secrets.deployUrl }}"
+        run: curl -X POST "${{ secrets.DeployWebhookURL }}"
