added Repository secrets

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
 
     steps:
       - name: Trigger deployment
-        run: curl -X POST "${{ secrets.DEPLOYWEBHOOKURL }}"
+        run: curl -X POST "${{ secrets.DEPLOY_URL }}"
       
